tests/integration/bbtw/snapshots/integration__bbtw__show__invalid limit 0.snap
---
source: tests/integration/bbtw/show.rs
expression: output.stderr
---
error: invalid value '0' for '--limit <LIMIT>': limit must be > 0

For more information, try '--help'.
