tests/integration/bbtw/snapshots/integration__bbtw__show__show.snap
---
source: tests/integration/bbtw/show.rs
expression: output.stdout
---
Showing builds for buildspace target

Building builds
  ✦ dummy_build

Built builds
  ✓ dummy_build

Failed builds
  ✗ dummy_build

Pending builds
  ⧗ dummy_build (Waiting for runner)
  ⧗ dummy_build (Waiting to be sent to executor)
  ● 0 (Waiting for dependencies to build)
  ● 1 (Waiting for dependencies to build)
  ● 2 (Waiting for dependencies to build)
  ● 3 (Waiting for dependencies to build)
  ● 4 (Waiting for dependencies to build)
  ● dummy_build (Waiting for dependencies to build)
  [And 4 others]
