tests/integration/bbtw/snapshots/integration__bbtw__show__show_closed.snap
---
source: tests/integration/bbtw/show.rs
expression: output.stdout
---
Showing builds for iteration #1 of buildspace target
⏹️ This buildspace is stopped.
