tests/integration/bbtw/snapshots/integration__bbtw__show__show_iteration-2.snap
---
source: tests/integration/bbtw/show.rs
expression: output.stdout
---
Showing builds for iteration #1 of buildspace target

Pending builds
  ● old_pkg (Waiting for dependencies to build)
