tests/integration/bbtw/snapshots/integration__bbtw__show__show_iteration.snap
---
source: tests/integration/bbtw/show.rs
expression: output.stdout
---
Showing builds for iteration #2 of buildspace target

Pending builds
  ● new_pkg_one (Waiting for dependencies to build)
  ● new_pkg_two (Waiting for dependencies to build)
