tests/integration/bbtw/snapshots/integration__bbtw__show__show_not_logged_in.snap
---
source: tests/integration/bbtw/show.rs
expression: output.stderr
---
Error: 
   0: Please log in first.
