tests/integration/bbtw/snapshots/integration__bbtw__show__valid limit 2.snap
---
source: tests/integration/bbtw/show.rs
expression: output.stdout
---
Showing builds for buildspace target

Pending builds
  ● 0 (Waiting for dependencies to build)
  ● 1 (Waiting for dependencies to build)
  [And 1 others]
