tests/integration/bbtw/snapshots/integration__bbtw__show__valid limit no.snap
---
source: tests/integration/bbtw/show.rs
expression: output.stdout
---
Showing builds for iteration #1 of buildspace target

Pending builds
  ⧗ 0 (Waiting to be sent to executor)
  ⧗ 1 (Waiting to be sent to executor)
  ⧗ 2 (Waiting to be sent to executor)
